Fix next/previous home page slider background too dark.

--- a/content/site.css
+++ b/content/site.css
@@ -203,7 +203,7 @@ a.nav-link:hover {
 
 .home .slideshow-prev:hover,
 .home .slideshow-next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: #CCC;
 }
 
 .home .numbertext {
